[package]
name = "mutter"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easy-to-use bindings to the Whisper.cpp machine learning transcription library!"
homepage = "https://github.com/sigaloid/mutter"
repository = "https://github.com/sigaloid/mutter"
documentation = "https://docs.rs/mutter"
keywords = ["whisper", "openai", "transcription", "machine-learning"]
categories = ["science", "multimedia::audio", "accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audrey = "0.3.0"
log = "0.4.21"
num = "0.4.3"
num_cpus = "1.16.0"
rodio = { version = "0.18.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
ureq = "2.9.7"
whisper-rs = { version = "0.11.1", features = ["whisper-cpp-log"] }

[features]
default = []

simd = []
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
opencl = ["whisper-rs/opencl"]
test-with-tiny-model = []

symphonia-aac = ["rodio/symphonia-aac"]
symphonia-all = ["rodio/symphonia-all"]
symphonia-flac = ["rodio/symphonia-flac"]
symphonia-isomp4 = ["rodio/symphonia-isomp4"]
symphonia-mp3 = ["rodio/symphonia-mp3"]
symphonia-vorbis = ["rodio/symphonia-vorbis"]
symphonia-wav = ["rodio/symphonia-wav"]
minimp3 = ["rodio/minimp3"]

[dev-dependencies]
glob = "0.3.1"
